--- a/assets/css/management.css
+++ b/assets/css/management.css
@@ -15,6 +15,32 @@
   visibility: visible;
   opacity: 1;
 }
+.main-content {
+  background-color: #f4f4f4;
+}
+.form-group,
+.main-content,
+input,
+.list-item {
+  background: #f2f1f1 !important;
+}
+#search-icon,
+.icons,
+.user-avatar {
+  color: #595757;
+}
+.user-avatar {
+  background: #e6e6e6;
+}
+.show-calendar {
+  font-size: 0.7rem;
+}
+.tab-item.active {
+  border-bottom: 2px solid black;
+}
+.tab-heading ul{
+  border-bottom: 1px solid #ebebeb;
+}
 @media (max-width: 991px) {
   .my-divider {
     display: none;
@@ -34,55 +60,7 @@
     opacity: 1;
     margin-left: 3rem;
   }
-}
-/* 
-
-
-@media (max-width: 991px) {
-
-  .my-divider {
-    display: none;
+  .h-lg-auto {
+    height: auto !important;
   }
-} */
-/*.navbar {
-  display: none;
 }
-
-.form-group,
-.main-content,
-input,
-.list-item{
-  background: #f2f1f1 !important;
-}
-
-#search-icon,
-.icons,
-.user-avatar
- {
-  color: #595757;
-}
-.user-circle {
-  background:#E5E5E5;
-  color: #979797;
-}
-.calendar-icon{
- box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-}
-.user-avatar,
-.owner{
-  background: #E8E8E8;
-
-}
-#toggle-menu{
-  cursor: pointer;
-}
-@media (max-width: 991px) {
-  .navbar {
-    display: flex;
-    border-bottom: 1px solid #676666;
-  }
-  .my-divider {
-    display: none;
-  }
-
-} */
