--- a/assets/css/management.css
+++ b/assets/css/management.css
@@ -45,6 +45,9 @@
 .main-content {
   background-color: #f4f4f4;
 }
+.navbar-nav {
+  border-bottom: 1px solid #ebebeb;
+}
 .form-group,
 .main-content,
 input,
@@ -60,7 +63,7 @@ input,
   background: #e6e6e6;
   color: #979797;
   border: none;
-  outline:none;
+  outline: none;
 }
 .show-calendar {
   font-size: 0.7rem;
@@ -68,9 +71,7 @@ input,
 .tab-item.active {
   border-bottom: 2px solid black;
 }
-.tab-heading ul {
-  border-bottom: 1px solid #ebebeb;
-}
+
 .nav-item {
   color: #595757;
 }
@@ -82,12 +83,12 @@ input,
   font-weight: 700;
   color: #000;
 }
-.account-title{
+.account-title {
   color: #979797;
-  font-size: .6rem;
+  font-size: 0.6rem;
 }
-.account-name{
-  font-size: .7rem;
+.account-name {
+  font-size: 0.7rem;
 }
 .modal-head {
   display: flex;
@@ -108,6 +109,15 @@ input,
 .logout-btn:hover {
   background: #000;
   color: #fff !important;
+}
+.detail-btn {
+  width: 50px;
+  height: 50px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.staf-details {
+  height: 92vh;
+  overflow-y: auto;
 }
 @media (max-width: 991px) {
   .app-main_content {
@@ -145,7 +155,7 @@ input,
     color: #595757;
     font-size: 0.8rem;
   }
-  /* .main-content::-webkit-scrollbar {
-    display: none;
-  } */
+  .staf-details {
+    height: 100%;
+  }
 }
