--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -1,10 +1,53 @@
 @import "./reset.css";
 @import "./sidebar.css";
+.sidebar {
+  width: 4%;
+}
 .app-main_content {
   height: 100vh;
 }
+.side-menu_item {
+  top: 0;
+  left: 0;
+  margin-left: 3rem;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.2s linear;
+  position: absolute;
+}
+.language-icon {
+  font-size: 0.5rem;
+}
+.sidebar-avatar-btn {
+  border: none;
+  outline: none;
+  color: #9799a8;
+  position: relative;
+}
+.sidebar-avatar-btn span {
+  position: absolute;
+  top: 60%;
+  right: -13%;
+  background: #fff;
+  color: #000;
+  text-transform: uppercase;
+  font-size: 0.6rem;
+  padding: 0.1rem 0.3rem;
+  border-radius: 50%;
+  font-weight: 700;
+}
+.navbar {
+  border-bottom: 1px solid #3a3a3a;
+}
+.menu-item:hover .side-menu_item {
+  visibility: visible;
+  opacity: 1;
+}
 .main-content {
   background-color: #f4f4f4;
+}
+.navbar-nav {
+  border-bottom: 1px solid #ebebeb;
 }
 .form-group,
 .main-content,
@@ -12,36 +55,11 @@ input,
 .list-item {
   background: #f2f1f1 !important;
 }
-.navbar-nav {
-  border-bottom: 1px solid #ebebeb;
+.search-services i {
+  color: #a2a19e;
 }
-.nav-item {
-  color: #595757;
-}
-.nav-item.active {
-  border-bottom: 2px solid black;
-  font-weight: 700;
-  color: #000;
-}
-.user-avatar {
-  background: #e6e6e6;
-  color: #979797;
-  border: none;
-  outline: none;
-}
-.detail-btn {
-  width: 50px;
-  height: 50px;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-}
-.show-calendar {
-  font-size: 0.7rem;
-}
- 
-#search-icon,
-.icons,
-.user-avatar {
-  color: #595757;
+.search-services input {
+  color: #a2a19e;
 }
 .user-avatar {
   background: #e6e6e6;
@@ -56,11 +74,17 @@ input,
   border-bottom: 2px solid black;
 }
 
-
+.nav-item {
+  color: #595757;
+}
 .content-nav_heading {
   border-bottom: 1px solid #d9d8d8;
 }
-
+.nav-item.active {
+  border-bottom: 2px solid black;
+  font-weight: 700;
+  color: #000;
+}
 .account-title {
   color: #979797;
   font-size: 0.6rem;
@@ -68,12 +92,7 @@ input,
 .account-name {
   font-size: 0.7rem;
 }
-.modal-head {
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  gap: 2rem;
-}
+
 .currently-user {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
@@ -96,6 +115,32 @@ input,
 .staf-details {
   height: 92vh;
   overflow-y: auto;
+}
+.content {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.content h4 {
+  font-size: 1.2rem;
+}
+.content p {
+  color: #8c8b88;
+  font-size: 0.8rem;
+}
+.cards-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.8rem;
+}
+.cards,
+.search-services{
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;  
+}
+.cards div h5 {
+  font-size: 1rem;
+}
+.cards p{
+  font-size: .8rem;
+  color: #8C8B88;
 }
 @media (max-width: 991px) {
   .app-main_content {
@@ -136,4 +181,10 @@ input,
   .staf-details {
     height: 100%;
   }
-} 
+}
+@media (max-width:768px) {
+  .cards-container {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 1rem;
+  }
+}
