--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -1,7 +1,6 @@
 @import "./reset.css";
-.sidebar {
-  width: 4%;
-}
+@import "./sidebar.css";
+
 .app-main_content {
   height: 100vh;
 }
@@ -17,24 +16,7 @@
 .language-icon {
   font-size: 0.5rem;
 }
-.sidebar-avatar-btn {
-  border: none;
-  outline: none;
-  color: #9799a8;
-  position: relative;
-}
-.sidebar-avatar-btn span {
-  position: absolute;
-  top: 60%;
-  right: -13%;
-  background: #fff;
-  color: #000;
-  text-transform: uppercase;
-  font-size: 0.6rem;
-  padding: 0.1rem 0.3rem;
-  border-radius: 50%;
-  font-weight: 700;
-}
+ 
 .navbar {
   border-bottom: 1px solid #3a3a3a;
 }
@@ -127,21 +109,7 @@ input,
   .my-divider {
     display: none;
   }
-  .sidebar {
-    width: 100%;
-    position: fixed;
-    left: -100%;
-    height: 100%;
-    transition: 0.4s ease;
-  }
-  .sidebar.active {
-    left: 0;
-  }
-  .side-menu_item {
-    visibility: visible;
-    opacity: 1;
-    margin-left: 3rem;
-  }
+  
   .h-lg-auto {
     height: auto !important;
   }
